# Sapi

./: .gitignore  Cargo.toml  LICENSE  main.py  requirements.txt  sapi_env.yml
Editor/: .vscodeignore  language-configuration.json  language-configuration.yml  log.txt  package-backup.json  package-lock.json  package.json  test.txt  test_res.txt  tsconfig.json
Parser/: demo.py  greeting.txt  pyproject.toml  sandbox.py  tab_.json  test.py  tree_.yml
Parser/local_sapi_env/Scripts/: activate  activate.bat
Parser/remote_sapi_env/Scripts/: activate  activate.bat
Parser/src/sapi/: __init__.py  _editor.py  _test.py  dyn_loop.py  parser.py  postgres_forest.py  runtime_forest.py  tokenizer.py
Parser/src/sapi/_internals/: dyn_loop.py  editor_tok.py  error.py  execution.py  generate_sql_str.py  parser.py  token_tree.py  tokenizer.py
Parser/src/sapi/_internals/db_contact/: data_model.py  deployment.py  dialect.py  pep249_database_api_spec_v2.py
Parser/src/sapi/_internals/db_contact/deployment_sql/: 1_create_sapi_sys.sql
Parser/src/sapi/_internals/execution/: dependencies.py  to_be_named.py
Parser/src/sapi/_internals/insert/: insert_generator.py  insert_parser.py
Parser/src/sapi/_internals/select_/: analyzer_loop.py  join_generator.py  path_finder.py  select_analyzer.py  select_parser.py  tree_join.py
Parser/src/sapi/select_/: join_generator.py  path_finder.py  select_analyzer.py  select_parser.py  tree_join.py
Parser/test/: comparison.py  demo_pg_model.py  execution_test.py  insert_cases.py  postgres_model.py  runtime_model.py  select_cases.py  test_code.py  test_insert.py  test_parser.py  test_select.py
Parser/test/demo_database/: 2_create_tables.sql  3_create_trees.sql  4_insert_tables.sql
Parser/test/engine/: __sys_path__.py  postgres_forest.py  select_cases.py  test_code.py
editor/: Cargo.toml  temp.py
engine/: data_model.py  data_model_refac.py  database_deployment.py  dialect.py  dummy.py  dyn_loop.py  dyn_loop_modify.py  hardcodedTrees.py  hardcodedTrees_backup.py  has_passed.py  join_generator.py  parser.py  path_finder.py  select_parser.py  softcodedTrees.py  step1.py  step2.py  stringifier.py  (+4 more)
sapi_compiler/: Cargo.toml
sapi_compiler/src/: lib.rs
sapi_compiler/src/internals/: compiler.rs  error.rs  ffi.rs  generate_sql_str.rs  mod.rs  parser.rs  test_tokenizer.rs  token.rs  token_tree.rs  tokenizer.rs
sapi_compiler/src/internals/db_contact/: data_model.rs  deployment.rs  mod.rs
sapi_compiler/src/internals/select/: analyzer_loop.rs  join_generator.rs  mod.rs  path_finder.rs  select_analyzer.rs  select_compiler.rs  select_parser.rs  test_select_analyzer.rs  tree_join.rs
sapi_compiler/src/internals/tools/: macros.rs  mod.rs  zip.rs
(+138 files in other folders)
