[package]
name = "sapi_compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
# sqlx = { version = "0.8.2", features = [ "postgres", "runtime-tokio-rustls" ] }
sqlparser = "0.53.0"
bumpalo = { version = "3.16.0", features = [ "collections", "boxed" ] } # evt. cut the box feature
# [patch.crates-io]
# my-crate = { path = "../sqlparser" } // make sqlparser compatible with bumpalo

[lib]
name = "sapi_compiler"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib", "cdylib"]



